# CropTool

./: CMakeLists.txt  CropDimensionLabel.qml  CropOverlay.qml  CropTool.qml  Diagonal.qml  GoldenRatio.qml  Misc.js  README.md  RuleOfThird.qml  crop.cpp  crop.h  main.cpp  main.qml
